compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__function_definition_snapshots@varargs_nonlast.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "fn foo(...args: Int32, a: Int32) {}"
---
× error[LM3016]: vararg parameter must be last
   ╭───────────
 1 │ fn foo(...args: Int32, a: Int32) {}
   │           ^^^^^^^^^^^ vararg parameter must be the last parameter
   ╰──
   help: consider moving the vararg parameter to the end
